to json function

--- a/wap/templates/a01/home.html
+++ b/wap/templates/a01/home.html
@@ -8,7 +8,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>{{TITLE}}</title>
+	<title>WAP Movie Site</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
