image upload and initial design.

--- a/wap/templates/a01/movie.html
+++ b/wap/templates/a01/movie.html
@@ -1,33 +1,118 @@
 {% load static %}
 
-
-
 <div class="row">
+    <div class="col_md">
+        <div class="lSSlideOuter">
+            <div class="lSSlideWrapper usingCss" style="transition-duration: 400ms;transition-timing-function: ease;">
+                <ul id="content-slider" class="content-slider lightSlider lSSlide"
+                    style="width: 5550px; transform: translate3d(-2220px, 0px, 0px); height: 720px; padding-bottom: 0%;">
+                    <li class="clone left" style="margin-right: 20px;">
+                        <div class="ticket-card " data-opentext="Timetable > Order" data-closetext="Хаах">
+                        </div>
+                    </li>
+                    <li class="clone left" style="margin-right: 20px;">
+                        <div class="ticket-card " data-opentext="Timetable > Order" data-closetext="Хаах">
 
- <div class="three columns">
+                        </div>
+                    </li>
+                    <li class="clone left" style="margin-right: 20px;">
+                        <div class="ticket-card " data-opentext="Timetable > Order" data-closetext="Хаах">
+                        </div>
+                    </li>
+                    <li class="clone left" style="margin-right: 20px;">
+                        <div class="ticket-card " data-opentext="Timetable > Order" data-closetext="Хаах">
+                        </div>
+                    </li>
+                    <li class="lslide" style="margin-right: 20px;">
+                        <div class="ticket-card " data-opentext="Timetable > Order" data-closetext="Хаах">
 
-    <img class="profile-pic"  src="{% static "images/profilepic.jpg" %}" alt="" />
-
- </div>
-
- <div class="nine columns main-col">
-
-    <h2>About</h2>
-
-    <p>
-    </p>
-
-    <div class="row">
-
-       <div class="columns contact-details">
-
-          <h2> Details</h2>
-
-       </div>
-
-
+                        </div>
+                    </li>
+                    <li class="lslide" style="margin-right: 20px;">
+                        <div class="ticket-card " data-opentext="Timetable > Order" data-closetext="Хаах">
+                        </div>
+                    </li>
+                    <li class="lslide" style="margin-right: 20px;">
+                        <div class="ticket-card " data-opentext="Timetable > Order" data-closetext="Хаах">
+                            <div class="cover">
+                                <div class="img">
+                                    <img src="/static/images/about/star-wars.jfif" alt="">
+                                    <a href="https://www.youtube.com/watch?v=6Nxc-3WpMbg" class="trailer fancybox-media"
+                                       onclick="gatr('Star Wars')" rel="media-gallery"></a>
+                                    <span class="movie-rate">PG</span>
+                                </div>
+                                <div class="info">
+                                    <div class="going">
+                                        <i class="fa fa-clock-o" title="Period"></i> 2h 21m
+                                    </div>
+                                    <div class="tickets-left">
+                                        <a href="#">Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="body">
+                                <div class="artist">
+                                    <h6 class="info">Action</h6>
+                                    <a class="name" href="#">
+                                        <h4>Star Wars</h4>
+                                    </a>
+                                </div>
+                                <div class="clearfix"></div>
+                                <div class="info info-branch">
+                                    <p class="location">
+                                        <i class="fa fa-map-marker" title="Branches"></i>
+                                            <span class="LA">Los Angeles</span>
+                                            <span class="CH">Chicago</span>
+                                            <span class="SF">San Francisco</span>
+                                            <span class="FR">Fairfield</span>
+                                    </p>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                            <div class="collapse timelist"></div>
+                            <div class="footer">
+                                <button class="btn toggle-tickets">Timetable &gt; Order</button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="lslide" style="margin-right: 20px;">
+                        <div class="ticket-card " data-opentext="Timetable > Order" data-closetext="Хаах">
+                        </div>
+                    </li>
+                    <li class="lslide" style="margin-right: 20px;">
+                        <div class="ticket-card " data-opentext="Timetable > Order" data-closetext="Хаах">
+                        </div>
+                    </li>
+                    <li class="lslide" style="margin-right: 20px;">
+                        <div class="ticket-card " data-opentext="Timetable > Order" data-closetext="Хаах">
+                        </div>
+                    </li>
+                    <li class="lslide" style="margin-right: 20px;">
+                        <div class="ticket-card " data-opentext="Timetable > Order" data-closetext="Хаах">
+                        </div>
+                    </li>
+                    <li class="clone right" style="margin-right: 20px;">
+                        <div class="ticket-card " data-opentext="Timetable > Order" data-closetext="Хаах">
+                        </div>
+                    </li>
+                    <li class="clone right" style="margin-right: 20px;">
+                        <div class="ticket-card " data-opentext="Timetable > Order" data-closetext="Хаах">
+                        </div>
+                    </li>
+                    <li class="clone right" style="margin-right: 20px;">
+                        <div class="ticket-card " data-opentext="Timetable > Order" data-closetext="Хаах">
+                        </div>
+                    </li>
+                    <li class="clone right" style="margin-right: 20px;">
+                        <div class="ticket-card " data-opentext="Timetable > Order" data-closetext="Хаах">
+                        </div>
+                    </li>
+                </ul>
+                <div class="lSAction">
+                    <a class="lSPrev"></a>
+                    <a class="lSNext"></a>
+                </div>
+            </div>
+        </div>
     </div>
-
- </div>
-
 </div>
