--- a/wap/templates/static/css/layout.css
+++ b/wap/templates/static/css/layout.css
@@ -402,6 +402,13 @@ div#nav li.current a {
     vertical-align: middle;
 }
 
+#about .ticket-card .cover .img {
+	-webkit-transform: translateY(-90px);
+	-moz-transform: translateY(-90px);
+	-ms-transform: translateY(-90px);
+	transform: translateY(-90px);
+}
+
 #about .ticket-card .trailer {
     position: absolute;
     left: 0;
