--- a/wap/templates/static/css/layout.css
+++ b/wap/templates/static/css/layout.css
@@ -393,20 +393,16 @@ div#nav li.current a {
     border-radius: 8px;
 }
 
-#about .ticket-card .cover .img img:hover {
-    transform: scale(1.5, 1.5); /** default is 1, scale it to 1.5 */
-    opacity: 1;
-}
-
-#about img{
-    vertical-align: middle;
-}
-
-#about .ticket-card .cover .img {
+.no-touch .ticket-card .cover .img:hover img,
+.ticket-card .cover .img.cs-hover  img{
 	-webkit-transform: translateY(-90px);
 	-moz-transform: translateY(-90px);
 	-ms-transform: translateY(-90px);
 	transform: translateY(-90px);
+}
+
+#about img{
+    vertical-align: middle;
 }
 
 #about .ticket-card .trailer {
