--- a/wap/templates/a01/order.html
+++ b/wap/templates/a01/order.html
@@ -1,34 +1,123 @@
 {% load static %}
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
 
 <div class="row">
 
-   <div class="three columns">
 
-      <img class="profile-pic"  src="{% static "images/profilepic.jpg" %}" alt="" />
+    <h2>Modal Example</h2>
+  <!-- Trigger the modal with a button -->
+  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
 
-   </div>
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
 
-   <div class="nine columns main-col">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Payment Window</h4>
+        </div>
+        <div class="modal-body">
 
-      <h2>About</h2>
-
-      <p>
-      </p>
-
-      <div class="row">
-
-         <div class="columns contact-details">
-
-            <h2> Details</h2>
-
-         </div>
+            <!-- email -->
+            <!-- cardnum = models.CharField(max_length=30)
+            expdate = models.DateField()
+            startdate = models.DateField() -->
 
 
+            <form id="myform" class="" action="">
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input required pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$" type="text" class="form-control" id="email" placeholder="name@example.com">
+                </div>
+                <div class="form-group">
+                    <label for="cardnum">Card Number</label>
+                    <input required pattern="
+                    ^(?:4[0-9]{12}(?:[0-9]{3})?|[25][1-7][0-9]{14}|6(?:011|5[0-9][0-9])[0-9]{12}|3[47][0-9]{13}|3(?:0[0-5]|[68][0-9])[0-9]{11}|(?:2131|1800|35\d{3})\d{11})$" type="text" class="form-control" id="cardnum" placeholder="1234-1234-1234-1234">
+                </div>
+
+                <div class="form-group">
+                    <label for="startdate">Start Date</label>
+                    <input required pattern="" type="date" class="form-control" id="startdate" max="2050-12-31" placeholder="1999-09-11">
+                </div>
+                <div class="form-group">
+                    <label for="expdate">Expiration Date</label>
+                    <input required pattern="" type="date" class="form-control" id="expdate" placeholder="2010-01-01">
+                </div>
+
+
+
+                  <button id="formBtn" class="btn btn-primary" type="submit" name="button">Create New Account</button>
+            </form>
+
+
+
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
       </div>
 
-   </div>
+    </div>
+  </div>
 
 </div>
+
+
+
+
+<div class="row" id="movielist">
+
+
+</div>
+
+<div class="row" id="timelist">
+
+</div>
+
+
+
+
+<script type="text/javascript">
+
+jQuery(document).ready(function($) {
+    $.ajax({
+        type: "GET",
+        dataType : 'json',
+        url: '/screening/list/',
+        success: function (data){
+
+            var html = ''
+            for (var i = 0, len = 6; i < len; i++) {
+                var td = '<div class="two columns"><button hall="'+data[i].hall+'" sdate="'+ data[i].sdate+'" stime="'+ data[i].stime +'" class="btn mybuttons">' + data[i].movie + '</button></div>';
+                html += td;
+            }
+            html += '';
+            $('#movielist').html(html);
+        },
+        failure: function() {alert("Error!");}
+    });
+});
+
+
+$(document).on('click','.mybuttons', function(){
+    var hall = $(this).attr('hall');
+    var sdate = $(this).attr('sdate');
+    var stime = $(this).attr('stime');
+    var seats = $(this).attr('seats');
+
+    $('#timelist').html(
+
+    );
+
+    console.log(datas);
+});
+
+</script>
