--- a/wap/templates/static/css/default.css
+++ b/wap/templates/static/css/default.css
@@ -567,8 +567,8 @@ input[type="checkbox"] { display: inline; }
 /* default
 --------------------------------------------------------------- */
 .row {
-   width: 96%;
-   max-width: 1020px;
+   /*width: 96%;*/
+   /*max-width: 1020px;*/
    margin: 0 auto;
 }
 /* fixed width for IE8 */
