--- a/wap/templates/static/css/layout.css
+++ b/wap/templates/static/css/layout.css
@@ -383,6 +383,10 @@ div#nav li.current a {
     display: none;
 }
 
+#about .collapse.in{
+    display: block;
+}
+
 #about .ticket-card .cover .img {
     width: 100%;
     position: relative;
@@ -613,6 +617,10 @@ div#nav li.current a {
 
 }
 
+
+#about .hiddenButton{
+    display:none;
+}
 /* ------------------------------------------------------------------ */
 /* d. Order Section
 /* ------------------------------------------------------------------ */
