--- a/wap/templates/a01/order.html
+++ b/wap/templates/a01/order.html
@@ -1,34 +1,264 @@
 {% load static %}
 
 
+<style>
+
+section {
+  display: inline-flex;
+  flex-direction: row;
+  /*flex-wrap: wrap;*/
+
+ }
+ article{
+  padding: 10px;
+  margin: 10px;
+
+ }
+
+ .right
+
+{float:right}
+
+.left
+{float:left}
+
+ .container {
+    padding-top: 40px;
+}
+.glyphicon-minus
+{
+
+	}
+</style>
+<meta charset="utf-8">
+<title>Book seats</title>
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
-<div class="row">
+<script type="text/javascript">
 
-   <div class="three columns">
+$(document).on('click', '.number-spinner button', function () {
+	var btn = $(this),
+		oldValue = btn.closest('.number-spinner').find('input').val().trim(),
+		newVal = 0;
 
-      <img class="profile-pic"  src="{% static "images/profilepic.jpg" %}" alt="" />
+	if (btn.attr('data-dir') == 'up') {
+		newVal = parseInt(oldValue) + 1;
+	} else {
+		if (oldValue > 1) {
+			newVal = parseInt(oldValue) - 1;
+		} else {
+			newVal = 1;
+		}
+	}
+	btn.closest('.number-spinner').find('input').val(newVal);
+});
 
-   </div>
+ var seats = [
+	[0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+	[0,0,1,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+	[0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+	[0,0,1,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+	[1,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+	[1,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+	[1,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+   ];
+var sel_seats=0;
+function generate_table(x,y) {
+  // get the reference for the body
+  <!--var body = document.getElementsByTagName("body")[0];
+  document.getElementById("btn").disabled = true;
+  // creates a <table> element and a <tbody> element
 
-   <div class="nine columns main-col">
-
-      <h2>About</h2>
-
-      <p>
-      </p>
-
-      <div class="row">
-
-         <div class="columns contact-details">
-
-            <h2> Details</h2>
-
-         </div>
+    var tbl = document.createElement("table");
+	var tblBody = document.createElement("tbody");
 
 
-      </div>
 
-   </div>
+  document.getElementById("seata").appendChild(tbl);
+  // creating all cells
 
+  for (var i = 0; i < seats.length; i++) {
+    // creates a table row
+    var row = document.createElement("tr");
+
+    for (var j = 0; j < seats[i].length; j++) {
+      // Create a <td> element and a text node, make the text
+      // node the contents of the <td>, and put the <td> at
+      // the end of the table row
+      var cell = document.createElement("td");
+      var cellText = document.createTextNode("cell");
+
+	  var image = document.createElement('img');
+	  if (seats[i][j]==0)
+          {image.src = "../static/images/free.jpg";}
+	  else
+	      {image.src = "../static/images/booked.jpg";}
+
+	  image.id="s"+i+","+j;
+
+	  image.onclick=function(){
+		  changeImage(this,image.id);
+		  }; <!--"javascript:changeImage(this)";
+      cell.appendChild(image);
+
+      row.appendChild(cell);
+    }
+
+    // add the row to the end of the table body
+    tblBody.appendChild(row);
+	}
+
+  // put the <tbody> in the <table>
+   if  (document.getElementById("btn").value=="Reset")
+  {
+	     //tblBody.removeChild(row);
+		 //tbl.removeChild(tblBody);
+		// generate_table(10,10);
+
+  }else{
+   		  tbl.appendChild(tblBody);
+	  }
+  tbl.appendChild(tblBody);
+  // appends <table> into <body>
+  <!--body.appendChild(tbl);
+  // sets the border attribute of tbl to 2;
+  tbl.setAttribute("border", "2");
+  document.getElementById("btn").value="Reset";
+}
+
+function generate_booked()
+{
+
+ var ctext="["+"<br>";
+   for (var i = 0; i < seats.length; i++) {
+	       ctext=ctext+"[";
+		    for (var j = 0; j < seats[i].length; j++)
+			{
+
+			 if (seats[i][j]==2)
+             {
+                 sel_seats=sel_seats+1;
+                 seats[i][j]=1;
+             }
+             ctext=ctext+seats[i][j]+" ";
+			}
+			ctext=ctext+"]"+"<br>";
+	   }
+  ctext=ctext+"]";
+  document.write(ctext);
+  document.write(sel_seats);
+}
+
+function changeImage(x,imgId)
+{
+element=document.getElementById(x.id);
+
+ if (document.getElementById("nstext").value>=0)
+ {
+if (element.src.match("seat"))
+  {
+	   var cnt=0;
+
+       element.src="../static/images/free.jpg";
+	   var cntr=document.getElementById("nstext").value;
+	   document.getElementById("nstext").value = parseInt(cntr)+1;
+    }
+else
+  {
+
+  if (document.getElementById("nstext").value>0 && !element.src.match("booked"))
+  {
+       var rw=x.id.substring(1,x.id.indexOf(","));
+	   var cl=x.id.substring(x.id.indexOf(",")+1,x.id.length);
+
+	   //document.write("Hello "+"row="+rw+"col="+cl);
+
+	  seats[rw][cl]=2;
+
+	  document.getElementById("nstext").value = document.getElementById("nstext").value-1;
+      element.src="../static/images/seat.jpg";
+   }
+  }
+}
+
+}
+//}
+</script>
+
+
+  <h3 ><span class="left">Movie Hall Seat Location</span><span class="right"></span>  </h3>
+<br/>
+<br>
+
+
+  Top
+  </div>
+ <section>
+  <article>
+
+
+<div class="container" align="center">
+	<div class="row">
+		<div class="col-xs-3 col-xs-offset-3">
+			Number of Seats to Order
+			     <div class="input-group number-spinner">
+			  <span class="input-group-btn">
+			  <button class="btn btn-default" data-dir="dwn"><span class="glyphicon glyphicon-minus"></span></button>
+			  </span>
+			  <input type="text" id="nstext" class="form-control text-center" value="1">
+			  <span class="input-group-btn">
+					<button class="btn btn-default" data-dir="up"><span class="glyphicon glyphicon-plus"></span></button>
+				</span>
+			</div>
+		</div>
+	</div>
 </div>
+
+
+  </article>
+  <article>
+  <table width="50px" height="40%" border="1" align="center">
+<tr>
+    <th>Your</th>
+    <th>Free</th>
+    <th>Booked</th>
+  </tr>
+<tr>
+
+<td>
+<img id="seats"  src="../static/images/seat.jpg" alt="" style="width:40px;height:40px;"></img>
+</td>
+
+<td>
+ <img id="seats"   src="../static/images/free.jpg" alt="" style="width:40px;height:40px;"></img>
+</td>
+
+
+<td>
+ <img id="seats"    src="../static/images/booked.jpg" alt="" style="width:40px;height:40px;"></img>
+</td>
+</tr>
+
+</table>
+
+
+
+ <input type="button" id="btn" value="Book Seat" onclick="generate_table(10,20)">
+ <div id="seata"> </div>
+
+ <input type="button" id="btn" value="Booked Seat" onclick="generate_booked(10,20)">
+ <div id="seatb"> </div>
+
+
+  </article>
+
+
+ </section>
+ <!--<div class="two">
+  УИХ-ын гишүүн С.Жавхлан:
+Top5
+  </div>
