--- a/wap/templates/a01/movie.html
+++ b/wap/templates/a01/movie.html
@@ -73,17 +73,17 @@
             var clicked = $(this);
             if(clicked.html()  == "Order" ){
                 clicked.html("Close");
-                console.log($('.footer>button').attr('id'));
+                console.log(this.id);
                 $(".schedule").addClass("in");
                  $.ajax({
-                    url: "/screening/movie/" + $(this).attr('id'),
+                    url: "/screening/movie/" + this.id,
                     type: "GET",
                     dataType: "json",
                 }).done(function (data) {
-                    $("#timetable").html("");
+                    $(".schedule").html("");
                     $.each(data, function (index, value) {
                         var html = '<div><a href="#order">'+value.fields.stime+'</a></div>';
-                        $("#timetable").append(html);
+                        $(".schedule").append(html);
                     });
                  });
             }
