--- a/wap/templates/a01/home.html
+++ b/wap/templates/a01/home.html
@@ -91,6 +91,7 @@
    ================================================== -->
    <section id="order">
 
+       {% include 'a01/order.html' %}
 
    </section> <!-- Order Section End-->
 
