--- a/wap/templates/a01/order.html
+++ b/wap/templates/a01/order.html
@@ -1,37 +1,7 @@
 {% load static %}
 
 
-<style>
-
-section {
-  display: inline-flex;
-  flex-direction: row;
-  /*flex-wrap: wrap;*/
-
- }
- article{
-  padding: 10px;
-  margin: 10px;
-
- }
-
- .right
-
-{float:right}
-
-.left
-{float:left}
-
- .container {
-    padding-top: 40px;
-}
-.glyphicon-minus
-{
-
-	}
-</style>
 <meta charset="utf-8">
-<title>Book seats</title>
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -57,15 +27,7 @@ $(document).on('click', '.number-spinner button', function () {
 	btn.closest('.number-spinner').find('input').val(newVal);
 });
 
- var seats = [
-	[0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-	[0,0,1,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-	[0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-	[0,0,1,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-	[1,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-	[1,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-	[1,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-   ];
+
 var sel_seats=0;
 
 function generate_table(x,y) {
@@ -191,75 +153,132 @@ else
 </script>
 
 
-  <h3 ><span class="left">Movie Hall Seat Location</span><span class="right"></span>  </h3>
-<br/>
-<br>
 
+<div class="row hidden" id="orderrow">
+    <div class="col-md-3">
 
-  Top
-  </div>
- <section>
-  <article>
+    </div>
+    <div class="col-md-6">
+        <div id="movielist" class="form-group">
 
+        </div>
+        <div class="form-group">
+          <input type="text" id="nstext" class="form-control text-center" value="1">
+        </div>
+    </div>
+    <div class="col-md-3">
 
-<div class="container" align="center">
-	<div class="row">
-		<div class="col-xs-3 col-xs-offset-3">
-			Number of Seats to Order
-			     <div class="input-group number-spinner">
-			  <span class="input-group-btn">
-			  <button class="btn btn-default" data-dir="dwn"><span class="glyphicon glyphicon-minus"></span></button>
-			  </span>
-			  <input type="text" id="nstext" class="form-control text-center" value="1">
-			  <span class="input-group-btn">
-					<button class="btn btn-default" data-dir="up"><span class="glyphicon glyphicon-plus"></span></button>
-				</span>
-			</div>
-		</div>
-	</div>
+    </div>
 </div>
 
-
-  </article>
-  <article>
-  <table width="50px" height="40%" border="1" align="center">
-<tr>
-    <th>Your</th>
-    <th>Free</th>
-    <th>Booked</th>
-  </tr>
-<tr>
-
-<td>
-<img id="seats"  src="../static/images/seat.jpg" alt="" style="width:40px;height:40px;"></img>
-</td>
-
-<td>
- <img id="seats"   src="../static/images/free.jpg" alt="" style="width:40px;height:40px;"></img>
-</td>
-
-
-<td>
- <img id="seats"    src="../static/images/booked.jpg" alt="" style="width:40px;height:40px;"></img>
-</td>
-</tr>
-
-</table>
-
-
-
- <input type="button" id="btn" value="Book Seat" onclick="generate_table(10,20)">
  <div id="seata"> </div>
 
- <input type="button" id="btn" value="Booked Seat" onclick="generate_booked(10,20)">
+
  <div id="seatb"> </div>
 
 
-  </article>
+ <div class="row">
 
 
- </section>
- <!--<div class="two">
-  УИХ-ын гишүүн С.Жавхлан:
-Top5
-  </div>
+       <!-- <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button> -->
+
+
+   <!-- Modal -->
+   <div class="modal fade" id="myModal" role="dialog">
+     <div class="modal-dialog">
+
+       <!-- Modal content-->
+       <div class="modal-content">
+         <div class="modal-header">
+           <button type="button" class="close" data-dismiss="modal">&times;</button>
+           <h4 class="modal-title">Payment Window</h4>
+         </div>
+         <div class="modal-body">
+
+             <form id="myform" class="" action="">{% csrf_token %}
+                 <div class="form-group">
+                     <label for="email">Email</label>
+                     <input required pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$" type="text" class="form-control" id="email" placeholder="name@example.com">
+                 </div>
+                 <div class="form-group">
+                     <label for="cardnum">Card Number</label>
+                     <input required type="text" class="form-control" id="cardnum" placeholder="1234-1234-1234-1234">
+                 </div>
+
+                 <div class="form-group">
+                     <label for="startdate">Start Date</label>
+                     <input required type="date" class="form-control" id="startdate" max="2050-12-31" placeholder="1999-09-11">
+                 </div>
+                 <div class="form-group">
+                     <label for="expdate">Expiration Date</label>
+                     <input required type="date" class="form-control" id="expdate" placeholder="2010-01-01">
+                 </div>
+
+
+
+                   <button id="formBtn" class="btn btn-primary" type="submit" name="button">Create New Account</button>
+             </form>
+         </div>
+         <div class="modal-footer">
+           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
+
+
+ <script type="text/javascript">
+
+ $(document).on('change', '#screentimes', function() {
+     var scrpk = this.value;
+     console.log("onchange");
+     $.ajax({
+         type: "GET",
+         dataType : 'json',
+         url: '/screening/'+scrpk+'/',
+         success: function (data){
+             screenData = data[0];
+             seats = JSON.parse(screenData.fields.seats);
+         },
+         failure: function() {alert("Error!");}
+     });
+ });
+
+
+ $(document).on('click','.mybuttons', function(){
+     var hall = $(this).attr('hall');
+     var sdate = $(this).attr('sdate');
+     var stime = $(this).attr('stime');
+     var seats = $(this).attr('seats');
+     $('#timelist').html(
+     );
+     console.log(datas);
+ });
+ jQuery(document).ready(function($) {
+         var form = $('#myform');
+         form.submit(function(e){
+             e.preventDefault();
+             var email = $("#email").val();
+             var cardnum = $("#cardnum").val();
+             var startdate = $("#startdate").val();
+             var expdate = $("#expdate").val();
+             var token = $("input[name~='csrfmiddlewaretoken']").first().val();
+             $.ajax({
+                 type: 'POST',
+                 url: '/payment/pay/',
+                 data: {
+                     'csrfmiddlewaretoken': token,
+                     'email': email,
+                     'cardnum': cardnum,
+                     'startdate': startdate,
+                     'expdate': expdate,
+                 },
+                 dataType: "json",
+                 success: function(resultData) {
+                     alert("Save Complete")
+                 }
+             });
+         });
+ });
+ </script>
